crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__aggregation__aggregate_count_artist_albums.snap
---
source: crates/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        },
        "Name": "Accept"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Aerosmith"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Alanis Morissette"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Alice In Chains"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        },
        "Name": "Antônio Carlos Jobim"
      }
    ]
  }
]
